// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Template Selector Category selector 1`] = `
.c3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: transparent;
  border: 1px solid transparent;
  border-radius: 4px;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  font: 400 16px / 24px "Lato",sans-serif;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  outline: none;
  padding: 7px 12px;
  -webkit-transition: border 0.1s,color 0.1s,background-color 0.1s,color 0.1s, filter 0.1s;
  transition: border 0.1s,color 0.1s,background-color 0.1s,color 0.1s, filter 0.1s;
  vertical-align: middle;
  white-space: nowrap;
  cursor: default;
  background-color: #e2e2e2 !important;
  border-color: #e2e2e2 !important;
  color: #fff !important;
}

.c3 svg + span {
  margin-left: 4px;
}

.c10 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: transparent;
  border: 1px solid transparent;
  border-radius: 4px;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  font: 400 16px / 24px "Lato",sans-serif;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  outline: none;
  padding: 7px 12px;
  -webkit-transition: border 0.1s,color 0.1s,background-color 0.1s,color 0.1s, filter 0.1s;
  transition: border 0.1s,color 0.1s,background-color 0.1s,color 0.1s, filter 0.1s;
  vertical-align: middle;
  white-space: nowrap;
}

.c10 svg + span {
  margin-left: 4px;
}

.c11 {
  color: #353535;
  background-color: #f2fbfc;
  border-color: #bce7f6;
}

.c11:not([disabled]):hover,
.c11:not([disabled]):focus {
  background-color: #f2fbfc;
}

.c11:not([disabled]):hover svg path[stroke],
.c11:not([disabled]):focus svg path[stroke] {
  stroke: #1a9bc7;
}

.c11:not([disabled]):hover svg text[fill],
.c11:not([disabled]):focus svg text[fill],
.c11:not([disabled]):hover svg rect[fill],
.c11:not([disabled]):focus svg rect[fill],
.c11:not([disabled]):hover svg path[fill],
.c11:not([disabled]):focus svg path[fill] {
  fill: #1a9bc7;
}

.c11 svg path[stroke] {
  stroke: #1a9bc7;
}

.c11 svg text[fill],
.c11 svg rect[fill],
.c11 svg path[fill] {
  fill: #1a9bc7;
}

.c14 {
  color: #353535;
  background-color: transparent;
  border-color: #e2e2e2;
}

.c14:not([disabled]):hover,
.c14:not([disabled]):focus {
  background-color: #f2fbfc;
}

.c14:not([disabled]):hover svg path[stroke],
.c14:not([disabled]):focus svg path[stroke] {
  stroke: #1a9bc7;
}

.c14:not([disabled]):hover svg text[fill],
.c14:not([disabled]):focus svg text[fill],
.c14:not([disabled]):hover svg rect[fill],
.c14:not([disabled]):focus svg rect[fill],
.c14:not([disabled]):hover svg path[fill],
.c14:not([disabled]):focus svg path[fill] {
  fill: #1a9bc7;
}

.c14 svg path[stroke] {
  stroke: #353535;
}

.c14 svg text[fill],
.c14 svg rect[fill],
.c14 svg path[fill] {
  fill: #353535;
}

.c4 {
  padding: 0;
  height: 20px;
  width: 20px;
}

.c4 svg g[stroke] {
  stroke: currentColor;
}

.c4 svg path[fill] {
  fill: currentColor;
}

.c4 svg path[stroke] {
  stroke: currentColor;
}

.c4 svg text[fill],
.c4 svg rect[fill],
.c4 svg path[fill] {
  fill: currentColor;
}

.c5 {
  color: #353535;
  background-color: transparent;
  border-color: transparent;
}

.c5:not([disabled]):hover,
.c5:not([disabled]):focus {
  color: #1a9bc7;
  background-color: transparent;
  border-color: transparent;
}

.c5:not([disabled]):active {
  color: #0d79d0;
  background-color: transparent;
  border-color: transparent;
}

.c6 {
  color: #6e6e6e;
  background-color: #fff;
  border-color: transparent;
}

.c6:not([disabled]):hover,
.c6:not([disabled]):focus {
  color: #6e6e6e;
  background-color: #f2fbfc;
  border-color: transparent;
}

.c6:not([disabled]).active,
.c6:not([disabled]):active {
  color: #6e6e6e;
  background-color: #f2fbfc;
  border-color: transparent;
}

.c0 {
  background-color: #fff;
  color: #353535;
  font-family: "Lato",sans-serif;
  padding: 3rem;
}

.c2 {
  position: relative;
}

.c2::before,
.c2::after {
  background-color: #e2e2e2;
  content: ' ';
  display: none;
  height: 64px;
  width: 1px;
  position: absolute;
  z-index: 1;
  top: -11px;
}

.c2::before {
  left: -4px;
}

.c2::after {
  right: -4px;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  overflow: auto;
  -ms-overflow-style: none;
  margin: auto;
  width: 100%;
  -webkit-scrollbar-width: none;
  -moz-scrollbar-width: none;
  -ms-scrollbar-width: none;
  scrollbar-width: none;
}

.c8::-webkit-scrollbar {
  height: 0;
  width: 0;
}

.c7 {
  border: none;
  border-radius: 50%;
  position: absolute;
  top: 8px;
  left: -36px;
}

.c7:focus:not([disabled]),
.c7:hover:not([disabled]) {
  background: #f2fbfc;
}

.c7 svg {
  -webkit-transform: rotate(90deg);
  -ms-transform: rotate(90deg);
  transform: rotate(90deg);
}

.c7 svg circle {
  stroke: #e2e2e2;
}

.c15 {
  border: none;
  border-radius: 50%;
  position: absolute;
  top: 8px;
  right: -36px;
}

.c15:focus:not([disabled]),
.c15:hover:not([disabled]) {
  background: #f2fbfc;
}

.c15 svg {
  -webkit-transform: rotate(90deg);
  -ms-transform: rotate(90deg);
  transform: rotate(90deg);
}

.c15 svg circle {
  stroke: #e2e2e2;
}

.c9 + .c9 {
  margin-left: 8px;
}

.c1 {
  margin: 0 64px 32px;
  position: relative;
}

.c12 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 4px;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c13 {
  padding-left: 10px;
}

@media (max-width:450px) {
  .c1 {
    margin-left: 70px;
    margin-right: 70px;
  }
}

<div
  className="c0"
>
  <div>
    <nav
      className="c1"
      role="navigation"
    >
      <div
        className="c2"
      >
        <button
          aria-label="Scroll left"
          className="c3 c4 c5 c6 c7"
          disabled={true}
          onClick={[Function]}
          size={20}
          type="button"
        >
          <svg
            height={20}
            viewBox="0 0 20 20"
            width={20}
          >
            <g
              fill="none"
              fillRule="evenodd"
              transform="matrix(1 0 0 -1 0 20)"
            >
              <circle
                cx={10}
                cy={10}
                r={9}
                stroke="#E2E2E2"
              />
              <path
                d="M6.505 10.974l3.548-3 3.652 2.96"
                stroke="#6E6E6E"
                strokeLinecap="round"
                strokeWidth={2}
              />
            </g>
          </svg>
        </button>
        <div
          className="c8"
        >
          <span
            className="c9 "
          >
            <button
              autoFocus={true}
              className="c10 c11 c12"
              onClick={[Function]}
              selected={true}
              title="Peer reviewed research publications."
              type="button"
            >
              <svg
                height={20}
                viewBox="0 0 18 20"
                width={18}
              >
                <g
                  fill="none"
                  fillRule="evenodd"
                >
                  <path
                    d="M4.282 2.25h9.436c.52 0 .815.057 1.124.222.294.157.529.392.686.686.165.309.222.604.222 1.124v11.436c0 .52-.057.815-.222 1.124a1.659 1.659 0 01-.686.686c-.309.165-.604.222-1.124.222H4.282c-.52 0-.815-.057-1.124-.222a1.659 1.659 0 01-.686-.686c-.165-.309-.222-.604-.222-1.124V4.282c0-.52.057-.815.222-1.124.157-.294.392-.529.686-.686.309-.165.604-.222 1.124-.222z"
                    stroke="#1A9BC7"
                    strokeWidth={1.5}
                  />
                  <path
                    d="M12 6a.75.75 0 01.75.75v7.5a.75.75 0 01-1.5 0v-7.5A.75.75 0 0112 6zm-6 4a.75.75 0 01.75.75v3.5a.75.75 0 01-1.5 0v-3.5A.75.75 0 016 10zm3-1a.75.75 0 01.75.75v4.5a.75.75 0 01-1.5 0v-4.5A.75.75 0 019 9z"
                    fill="#1A9BC7"
                  />
                </g>
              </svg>
              <span
                className="c13"
              >
                Research Article
              </span>
            </button>
          </span>
          <span
            className="c9 "
          >
            <button
              autoFocus={false}
              className="c10 c14 c12"
              onClick={[Function]}
              selected={false}
              title="Essays"
              type="button"
            >
              <svg
                height={20}
                viewBox="0 0 18 20"
                width={18}
              >
                <g
                  fill="none"
                  fillRule="evenodd"
                  transform="translate(3 2)"
                >
                  <path
                    d="M1.282.25h9.436c.52 0 .815.057 1.124.222.294.157.529.392.686.686.165.309.222.604.222 1.124v11.436c0 .52-.057.815-.222 1.124a1.659 1.659 0 01-.686.686c-.309.165-.604.222-1.124.222H1.282c-.52 0-.815-.057-1.124-.222a1.659 1.659 0 01-.686-.686c-.165-.309-.222-.604-.222-1.124V2.282c0-.52.057-.815.222-1.124C-.37.864-.136.629.158.472.467.307.762.25 1.282.25z"
                    stroke="#1A9BC7"
                    strokeWidth={1.5}
                  />
                  <rect
                    fill="#1A9BC7"
                    height={16}
                    rx={0.75}
                    width={1.5}
                    x={2}
                  />
                </g>
              </svg>
              <span
                className="c13"
              >
                Essay
              </span>
            </button>
          </span>
          <span
            className="c9 "
          >
            <button
              autoFocus={false}
              className="c10 c14 c12"
              onClick={[Function]}
              selected={false}
              title="Master's & PhD theses, and other dissertations."
              type="button"
            >
              <svg
                height={19}
                viewBox="0 0 16 19"
                width={16}
              >
                <g
                  fill="none"
                  fillRule="evenodd"
                >
                  <path
                    d="M3.5 8a.75.75 0 01.75.75v4.5a.75.75 0 11-1.5 0v-4.5A.75.75 0 013.5 8zm3 0a.75.75 0 01.75.75v4.5a.75.75 0 11-1.5 0v-4.5A.75.75 0 016.5 8zm3 0a.75.75 0 01.75.75v4.5a.75.75 0 11-1.5 0v-4.5A.75.75 0 019.5 8zm3 0a.75.75 0 01.75.75v4.5a.75.75 0 11-1.5 0v-4.5A.75.75 0 0112.5 8z"
                    fill="#1A9BC7"
                  />
                  <path
                    d="M7.862 2.894a.25.25 0 00-.224 0L1.874 5.776a.25.25 0 00.112.474h11.528a.25.25 0 00.112-.474L7.862 2.894z"
                    stroke="#1A9BC7"
                    strokeWidth={1.5}
                  />
                  <path
                    d="M1.75 15h12.5a.75.75 0 110 1.5H1.75a.75.75 0 110-1.5z"
                    fill="#1A9BC7"
                  />
                </g>
              </svg>
              <span
                className="c13"
              >
                Dissertation
              </span>
            </button>
          </span>
          <span
            className="c9 "
          >
            <button
              autoFocus={false}
              className="c10 c14 c12"
              onClick={[Function]}
              selected={false}
              title="A book or a book chapter"
              type="button"
            >
              <svg
                height={20}
                viewBox="0 0 19 20"
                width={19}
              >
                <g
                  fill="none"
                  fillRule="evenodd"
                >
                  <path
                    d="M4.032 2.75H12.5v15.5H4.032c-.52 0-.815-.057-1.124-.222a1.659 1.659 0 01-.686-.686C2.057 17.033 2 16.738 2 16.218V4.782c0-.52.057-.815.222-1.124.157-.294.392-.529.686-.686.309-.165.604-.222 1.124-.222z"
                    stroke="#1A9BC7"
                    strokeWidth={1.5}
                  />
                  <path
                    d="M14.75 2.25a.75.75 0 01.75.75v15a.75.75 0 11-1.5 0V3a.75.75 0 01.75-.75zM17 2.5a.75.75 0 01.75.75v14.5a.75.75 0 11-1.5 0V3.25A.75.75 0 0117 2.5z"
                    fill="#1A9BC7"
                  />
                </g>
              </svg>
              <span
                className="c13"
              >
                Book
              </span>
            </button>
          </span>
          <span
            className="c9 "
          >
            <button
              autoFocus={false}
              className="c10 c14 c12"
              onClick={[Function]}
              selected={false}
              title="An application for funding."
              type="button"
            >
              <svg
                height={20}
                viewBox="0 0 18 20"
                width={18}
              >
                <g
                  fill="none"
                  fillRule="evenodd"
                >
                  <path
                    d="M4.282 2.25h9.436c.52 0 .815.057 1.124.222.294.157.529.392.686.686.165.309.222.604.222 1.124v11.436c0 .52-.057.815-.222 1.124a1.659 1.659 0 01-.686.686c-.309.165-.604.222-1.124.222H4.282c-.52 0-.815-.057-1.124-.222a1.659 1.659 0 01-.686-.686c-.165-.309-.222-.604-.222-1.124V4.282c0-.52.057-.815.222-1.124.157-.294.392-.529.686-.686.309-.165.604-.222 1.124-.222z"
                    stroke="#1A9BC7"
                    strokeWidth={1.5}
                  />
                  <text
                    fill="#1A9BC7"
                    fontFamily="Barlow-Bold, Barlow"
                    fontSize={10}
                    fontWeight="bold"
                    letterSpacing={-0.154}
                    transform="translate(3 3)"
                  >
                    <tspan
                      x={3.317}
                      y={10.75}
                    >
                      $
                    </tspan>
                  </text>
                </g>
              </svg>
              <span
                className="c13"
              >
                Grant Application
              </span>
            </button>
          </span>
          <span
            className="c9 "
          >
            <button
              autoFocus={false}
              className="c10 c14 c12"
              onClick={[Function]}
              selected={false}
              title="A blog post"
              type="button"
            >
              <svg
                height={16}
                viewBox="0 0 21 16"
                width={21}
              >
                <g
                  fill="none"
                  fillRule="evenodd"
                  transform="translate(2 4)"
                >
                  <path
                    d="M3.641-.75h10.718c.316 0 .523.04.739.155.212.114.383.285.497.497.115.216.155.423.155.739V7.75H2.25V.641c0-.316.04-.523.155-.739.114-.212.285-.383.497-.497.216-.115.423-.155.739-.155z"
                    stroke="#1A9BC7"
                    strokeWidth={1.5}
                  />
                  <rect
                    fill="#1A9BC7"
                    height={1.5}
                    rx={0.75}
                    width={18}
                    y={9}
                  />
                </g>
              </svg>
              <span
                className="c13"
              >
                Blog Post
              </span>
            </button>
          </span>
          <span
            className="c9 "
          >
            <button
              autoFocus={false}
              className="c10 c14 c12"
              onClick={[Function]}
              selected={false}
              title="A manual (for a software product etc)."
              type="button"
            >
              <svg
                height={21}
                viewBox="0 0 18 21"
                width={18}
              >
                <g
                  fill="none"
                  fillRule="evenodd"
                >
                  <path
                    d="M4.282 3.25h9.436c.52 0 .815.057 1.124.222.294.157.529.392.686.686.165.309.222.604.222 1.124v11.436c0 .52-.057.815-.222 1.124a1.659 1.659 0 01-.686.686c-.309.165-.604.222-1.124.222H4.282c-.52 0-.815-.057-1.124-.222a1.659 1.659 0 01-.686-.686c-.165-.309-.222-.604-.222-1.124V5.282c0-.52.057-.815.222-1.124.157-.294.392-.529.686-.686.309-.165.604-.222 1.124-.222z"
                    stroke="#1A9BC7"
                    strokeWidth={1.5}
                  />
                  <path
                    d="M10 8.5a.75.75 0 01-.75.75h-.999l-.001 1a.75.75 0 01-1.5 0v-1h-1a.75.75 0 010-1.5h1v-1a.75.75 0 011.5 0v1h1a.75.75 0 01.75.75z"
                    fill="#1A9BC7"
                  />
                </g>
              </svg>
              <span
                className="c13"
              >
                Manual
              </span>
            </button>
          </span>
        </div>
        <button
          aria-label="Scroll right"
          className="c3 c4 c5 c6 c15"
          disabled={true}
          onClick={[Function]}
          size={20}
          type="button"
        >
          <svg
            height={20}
            viewBox="0 0 20 20"
            width={20}
          >
            <g
              fill="none"
              fillRule="evenodd"
              transform="matrix(-1 0 0 1 20 0)"
            >
              <circle
                cx={10}
                cy={10}
                r={9}
                stroke="#E2E2E2"
              />
              <path
                d="M6.505 10.974l3.548-3 3.652 2.96"
                stroke="#6E6E6E"
                strokeLinecap="round"
                strokeWidth={2}
              />
            </g>
          </svg>
        </button>
      </div>
    </nav>
  </div>
</div>
`;

exports[`Storyshots Template Selector Empty category 1`] = `
.c0 {
  background-color: #fff;
  color: #353535;
  font-family: "Lato",sans-serif;
  padding: 3rem;
}

.c3 {
  font-weight: 700;
}

.c1 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  overflow-y: auto;
  width: 600px;
  max-width: 100%;
}

.c2 {
  max-width: 400px;
  font-size: 16px;
  color: #353535;
  margin: 20px;
  text-align: center;
}

<div
  className="c0"
>
  <div>
    <div
      className="c1"
    >
      <div
        className="c2"
      >
        No manuscript templates yet in the
         
        <span
          className="c3"
        >
          Biology
        </span>
         category.
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Template Selector Empty search results 1`] = `
.c0 {
  background-color: #fff;
  color: #353535;
  font-family: "Lato",sans-serif;
  padding: 3rem;
}

.c3 {
  font-weight: 700;
}

.c1 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  overflow-y: auto;
  width: 600px;
  max-width: 100%;
}

.c2 {
  max-width: 400px;
  font-size: 16px;
  color: #353535;
  margin: 20px;
  text-align: center;
}

<div
  className="c0"
>
  <div>
    <div
      className="c1"
    >
      <div
        className="c2"
      >
        No matching template for query
         
        <span
          className="c3"
        >
          example
        </span>
        .
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Template Selector Modal 1`] = `
.c27 {
  display: block;
  border: 1px solid #e2e2e2;
  border-radius: 4px;
  box-sizing: border-box;
  font: 400 16px / 1 "Lato",sans-serif;
  outline: none;
  padding: 10px 16px;
  position: relative;
  width: 100%;
}

.c27:focus {
  border-color: #bce7f6;
  background-color: #f2fbfc;
}

.c27:hover {
  background-color: #f2fbfc;
}

.c27:invalid {
  box-shadow: none;
}

.c3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: transparent;
  border: 1px solid transparent;
  border-radius: 4px;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  font: 400 16px / 24px "Lato",sans-serif;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  outline: none;
  padding: 7px 12px;
  -webkit-transition: border 0.1s,color 0.1s,background-color 0.1s,color 0.1s, filter 0.1s;
  transition: border 0.1s,color 0.1s,background-color 0.1s,color 0.1s, filter 0.1s;
  vertical-align: middle;
  white-space: nowrap;
}

.c3 svg + span {
  margin-left: 4px;
}

.c13 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: transparent;
  border: 1px solid transparent;
  border-radius: 4px;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  font: 400 16px / 24px "Lato",sans-serif;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  outline: none;
  padding: 7px 12px;
  -webkit-transition: border 0.1s,color 0.1s,background-color 0.1s,color 0.1s, filter 0.1s;
  transition: border 0.1s,color 0.1s,background-color 0.1s,color 0.1s, filter 0.1s;
  vertical-align: middle;
  white-space: nowrap;
  cursor: default;
  background-color: #e2e2e2 !important;
  border-color: #e2e2e2 !important;
  color: #fff !important;
}

.c13 svg + span {
  margin-left: 4px;
}

.c39 {
  color: #fff;
  background-color: #0d79d0;
  border-color: #0d79d0;
}

.c39:not([disabled]):hover,
.c39:not([disabled]):focus {
  color: #fff;
  background-color: #0b6bb8;
  border-color: #0b6bb8;
}

.c39:not([disabled]):active {
  color: #fff;
  background-color: #0b6bb8;
  border-color: #0b6bb8;
}

.c30 {
  color: #0d79d0;
  background-color: transparent;
  border-color: transparent;
}

.c30:not([disabled]):hover,
.c30:not([disabled]):focus {
  color: #0d79d0;
  background-color: #f2fbfc;
  border-color: #f2fbfc;
}

.c30:not([disabled]):active {
  color: #0d79d0;
  background-color: transparent;
  border-color: transparent;
}

.c19 {
  color: #353535;
  background-color: #f2fbfc;
  border-color: #bce7f6;
}

.c19:not([disabled]):hover,
.c19:not([disabled]):focus {
  background-color: #f2fbfc;
}

.c19:not([disabled]):hover svg path[stroke],
.c19:not([disabled]):focus svg path[stroke] {
  stroke: #1a9bc7;
}

.c19:not([disabled]):hover svg text[fill],
.c19:not([disabled]):focus svg text[fill],
.c19:not([disabled]):hover svg rect[fill],
.c19:not([disabled]):focus svg rect[fill],
.c19:not([disabled]):hover svg path[fill],
.c19:not([disabled]):focus svg path[fill] {
  fill: #1a9bc7;
}

.c19 svg path[stroke] {
  stroke: #1a9bc7;
}

.c19 svg text[fill],
.c19 svg rect[fill],
.c19 svg path[fill] {
  fill: #1a9bc7;
}

.c22 {
  color: #353535;
  background-color: transparent;
  border-color: #e2e2e2;
}

.c22:not([disabled]):hover,
.c22:not([disabled]):focus {
  background-color: #f2fbfc;
}

.c22:not([disabled]):hover svg path[stroke],
.c22:not([disabled]):focus svg path[stroke] {
  stroke: #1a9bc7;
}

.c22:not([disabled]):hover svg text[fill],
.c22:not([disabled]):focus svg text[fill],
.c22:not([disabled]):hover svg rect[fill],
.c22:not([disabled]):focus svg rect[fill],
.c22:not([disabled]):hover svg path[fill],
.c22:not([disabled]):focus svg path[fill] {
  fill: #1a9bc7;
}

.c22 svg path[stroke] {
  stroke: #353535;
}

.c22 svg text[fill],
.c22 svg rect[fill],
.c22 svg path[fill] {
  fill: #353535;
}

.c4 {
  padding: 0;
  height: 40px;
  width: 40px;
}

.c14 {
  padding: 0;
  height: 20px;
  width: 20px;
}

.c14 svg g[stroke] {
  stroke: currentColor;
}

.c14 svg path[fill] {
  fill: currentColor;
}

.c14 svg path[stroke] {
  stroke: currentColor;
}

.c14 svg text[fill],
.c14 svg rect[fill],
.c14 svg path[fill] {
  fill: currentColor;
}

.c5 {
  color: #353535;
  background-color: transparent;
  border-color: transparent;
}

.c5:not([disabled]):hover,
.c5:not([disabled]):focus {
  color: #1a9bc7;
  background-color: transparent;
  border-color: transparent;
}

.c5:not([disabled]):active {
  color: #0d79d0;
  background-color: transparent;
  border-color: transparent;
}

.c6 {
  background: #fff;
  border: 5px solid #fff !important;
  border-radius: 50%;
  box-sizing: border-box;
  box-shadow: 0 0 8px 0 rgba(0,0,0,0.12);
  display: inline-block;
  height: 40px;
  padding: 0;
  position: relative;
  width: 40px;
  -webkit-transition: border-color 0.25s;
  transition: border-color 0.25s;
}

.c6:focus,
.c6:hover {
  background: #f2fbfc !important;
}

.c6 svg {
  max-height: 16px;
  max-width: 16px;
  vertical-align: middle;
}

.c15 {
  color: #6e6e6e;
  background-color: #fff;
  border-color: transparent;
}

.c15:not([disabled]):hover,
.c15:not([disabled]):focus {
  color: #6e6e6e;
  background-color: #f2fbfc;
  border-color: transparent;
}

.c15:not([disabled]).active,
.c15:not([disabled]):active {
  color: #6e6e6e;
  background-color: #f2fbfc;
  border-color: transparent;
}

.c37 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c37 button:not(:first-child) {
  margin-left: 4px;
}

.c7 {
  box-shadow: none;
  text-indent: -99999px;
}

.c7::before,
.c7::after {
  background-color: #6e6e6e;
  border-radius: 2px;
  content: ' ';
  display: block;
  height: 14px;
  -webkit-transform: rotate(-45deg);
  -ms-transform: rotate(-45deg);
  transform: rotate(-45deg);
  width: 2px;
  position: absolute;
  top: calc(50% - 7px);
  left: calc(50% - 1px);
}

.c7::after {
  -webkit-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  transform: rotate(45deg);
}

.c0 {
  background-color: #fff;
  color: #353535;
  font-family: "Lato",sans-serif;
  padding: 3rem;
}

.c25 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
  position: relative;
}

.c26 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  left: 16px;
  position: absolute;
  z-index: 2;
}

.c26 path {
  fill: #353535;
}

.c28 {
  -webkit-appearance: textfield;
  padding-left: 44px;
}

.c28:hover,
.c28:focus {
  background-color: #f2fbfc;
}

.c12 {
  position: relative;
}

.c12::before,
.c12::after {
  background-color: #e2e2e2;
  content: ' ';
  display: none;
  height: 64px;
  width: 1px;
  position: absolute;
  z-index: 1;
  top: -11px;
}

.c12::before {
  left: -4px;
}

.c12::after {
  right: -4px;
}

.c17 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  overflow: auto;
  -ms-overflow-style: none;
  margin: auto;
  width: 100%;
  -webkit-scrollbar-width: none;
  -moz-scrollbar-width: none;
  -ms-scrollbar-width: none;
  scrollbar-width: none;
}

.c17::-webkit-scrollbar {
  height: 0;
  width: 0;
}

.c16 {
  border: none;
  border-radius: 50%;
  position: absolute;
  top: 8px;
  left: -36px;
}

.c16:focus:not([disabled]),
.c16:hover:not([disabled]) {
  background: #f2fbfc;
}

.c16 svg {
  -webkit-transform: rotate(90deg);
  -ms-transform: rotate(90deg);
  transform: rotate(90deg);
}

.c16 svg circle {
  stroke: #e2e2e2;
}

.c23 {
  border: none;
  border-radius: 50%;
  position: absolute;
  top: 8px;
  right: -36px;
}

.c23:focus:not([disabled]),
.c23:hover:not([disabled]) {
  background: #f2fbfc;
}

.c23 svg {
  -webkit-transform: rotate(90deg);
  -ms-transform: rotate(90deg);
  transform: rotate(90deg);
}

.c23 svg circle {
  stroke: #e2e2e2;
}

.c18 + .c18 {
  margin-left: 8px;
}

.c11 {
  margin: 0 64px 32px;
  position: relative;
}

.c20 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 4px;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c21 {
  padding-left: 10px;
}

.c2 {
  position: absolute;
  right: 0;
  top: 0;
  z-index: 1;
}

.c34 {
  box-shadow: 0 -2px 12px 0 rgba(216,216,216,0.26);
  padding: 20px 32px;
  z-index: 1;
  margin-top: auto;
}

.c35 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  font-size: 14px;
  font-weight: 400;
  line-height: 20px;
  max-width: 55%;
}

.c36 {
  color: #6e6e6e;
}

.c38 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin: 48px auto 32px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c10 {
  font-size: 24px;
  font-weight: 700;
  line-height: 24px;
  margin: 0;
}

.c29 {
  border-left: 1px solid #e2e2e2;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c29 button {
  border-radius: 0;
}

.c29 svg path[stroke] {
  stroke: currentColor;
}

.c31 {
  color: #6e6e6e;
  font-size: 14px;
  font-weight: 400;
  text-transform: none;
}

.c32 {
  margin-right: 4px;
}

.c8 {
  background: #fff;
  border-radius: 8px;
  box-shadow: 0 4px 9px 0 rgba(84,83,83,0.3);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  font-family: "Lato",sans-serif;
  margin: 12px;
  overflow: hidden;
  height: 80vh;
  max-height: 900px;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 100%;
  margin: 0 auto;
  max-width: 626px;
  position: relative;
  margin-top: 12px;
}

.c24 {
  border: 1px solid #e2e2e2;
  border-radius: 4px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin: 0 30px 16px;
}

.c24 input {
  border: none;
}

.c33 {
  border: 1px solid #e2e2e2;
  border-radius: 4px;
  list-style: none;
  margin: 0 30px 16px;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  overflow: hidden;
  padding: 0;
}

@media (max-width:450px) {
  .c11 {
    margin-left: 70px;
    margin-right: 70px;
  }
}

@media (min-width:768px) {
  .c34 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
  }
}

@media (max-width:767px) {
  .c35 {
    margin-bottom: 16px;
  }
}

@media (max-width:767px) {
  .c38 {
    -webkit-box-pack: center;
    -webkit-justify-content: center;
    -ms-flex-pack: center;
    justify-content: center;
  }
}

@media (max-width:450px) {
  .c9 {
    padding: 0 16px;
  }
}

@media (max-width:450px) {
  .c24 {
    margin-left: 16px;
    margin-right: 16px;
  }
}

@media (max-width:450px) {
  .c33 {
    margin: 0 16px;
  }
}

<div
  className="c0"
>
  <div>
    <div
      className="c1"
    >
      <div
        className="c2"
      >
        <button
          className="c3 c4 c5 c6 c7"
          onClick={[Function]}
          type="button"
        >
          Close Modal
        </button>
      </div>
      <div
        className="c8"
      >
        <header
          className="c9"
        >
          <h2
            className="c10"
          >
            Add Manuscript to Project
          </h2>
        </header>
        <nav
          className="c11"
          role="navigation"
        >
          <div
            className="c12"
          >
            <button
              aria-label="Scroll left"
              className="c13 c14 c5 c15 c16"
              disabled={true}
              onClick={[Function]}
              size={20}
              type="button"
            >
              <svg
                height={20}
                viewBox="0 0 20 20"
                width={20}
              >
                <g
                  fill="none"
                  fillRule="evenodd"
                  transform="matrix(1 0 0 -1 0 20)"
                >
                  <circle
                    cx={10}
                    cy={10}
                    r={9}
                    stroke="#E2E2E2"
                  />
                  <path
                    d="M6.505 10.974l3.548-3 3.652 2.96"
                    stroke="#6E6E6E"
                    strokeLinecap="round"
                    strokeWidth={2}
                  />
                </g>
              </svg>
            </button>
            <div
              className="c17"
            >
              <span
                className="c18 "
              >
                <button
                  autoFocus={true}
                  className="c3 c19 c20"
                  onClick={[Function]}
                  selected={true}
                  title="Peer reviewed research publications."
                  type="button"
                >
                  <svg
                    height={20}
                    viewBox="0 0 18 20"
                    width={18}
                  >
                    <g
                      fill="none"
                      fillRule="evenodd"
                    >
                      <path
                        d="M4.282 2.25h9.436c.52 0 .815.057 1.124.222.294.157.529.392.686.686.165.309.222.604.222 1.124v11.436c0 .52-.057.815-.222 1.124a1.659 1.659 0 01-.686.686c-.309.165-.604.222-1.124.222H4.282c-.52 0-.815-.057-1.124-.222a1.659 1.659 0 01-.686-.686c-.165-.309-.222-.604-.222-1.124V4.282c0-.52.057-.815.222-1.124.157-.294.392-.529.686-.686.309-.165.604-.222 1.124-.222z"
                        stroke="#1A9BC7"
                        strokeWidth={1.5}
                      />
                      <path
                        d="M12 6a.75.75 0 01.75.75v7.5a.75.75 0 01-1.5 0v-7.5A.75.75 0 0112 6zm-6 4a.75.75 0 01.75.75v3.5a.75.75 0 01-1.5 0v-3.5A.75.75 0 016 10zm3-1a.75.75 0 01.75.75v4.5a.75.75 0 01-1.5 0v-4.5A.75.75 0 019 9z"
                        fill="#1A9BC7"
                      />
                    </g>
                  </svg>
                  <span
                    className="c21"
                  >
                    Research Article
                  </span>
                </button>
              </span>
              <span
                className="c18 "
              >
                <button
                  autoFocus={false}
                  className="c3 c22 c20"
                  onClick={[Function]}
                  selected={false}
                  title="Essays"
                  type="button"
                >
                  <svg
                    height={20}
                    viewBox="0 0 18 20"
                    width={18}
                  >
                    <g
                      fill="none"
                      fillRule="evenodd"
                      transform="translate(3 2)"
                    >
                      <path
                        d="M1.282.25h9.436c.52 0 .815.057 1.124.222.294.157.529.392.686.686.165.309.222.604.222 1.124v11.436c0 .52-.057.815-.222 1.124a1.659 1.659 0 01-.686.686c-.309.165-.604.222-1.124.222H1.282c-.52 0-.815-.057-1.124-.222a1.659 1.659 0 01-.686-.686c-.165-.309-.222-.604-.222-1.124V2.282c0-.52.057-.815.222-1.124C-.37.864-.136.629.158.472.467.307.762.25 1.282.25z"
                        stroke="#1A9BC7"
                        strokeWidth={1.5}
                      />
                      <rect
                        fill="#1A9BC7"
                        height={16}
                        rx={0.75}
                        width={1.5}
                        x={2}
                      />
                    </g>
                  </svg>
                  <span
                    className="c21"
                  >
                    Essay
                  </span>
                </button>
              </span>
              <span
                className="c18 "
              >
                <button
                  autoFocus={false}
                  className="c3 c22 c20"
                  onClick={[Function]}
                  selected={false}
                  title="Master's & PhD theses, and other dissertations."
                  type="button"
                >
                  <svg
                    height={19}
                    viewBox="0 0 16 19"
                    width={16}
                  >
                    <g
                      fill="none"
                      fillRule="evenodd"
                    >
                      <path
                        d="M3.5 8a.75.75 0 01.75.75v4.5a.75.75 0 11-1.5 0v-4.5A.75.75 0 013.5 8zm3 0a.75.75 0 01.75.75v4.5a.75.75 0 11-1.5 0v-4.5A.75.75 0 016.5 8zm3 0a.75.75 0 01.75.75v4.5a.75.75 0 11-1.5 0v-4.5A.75.75 0 019.5 8zm3 0a.75.75 0 01.75.75v4.5a.75.75 0 11-1.5 0v-4.5A.75.75 0 0112.5 8z"
                        fill="#1A9BC7"
                      />
                      <path
                        d="M7.862 2.894a.25.25 0 00-.224 0L1.874 5.776a.25.25 0 00.112.474h11.528a.25.25 0 00.112-.474L7.862 2.894z"
                        stroke="#1A9BC7"
                        strokeWidth={1.5}
                      />
                      <path
                        d="M1.75 15h12.5a.75.75 0 110 1.5H1.75a.75.75 0 110-1.5z"
                        fill="#1A9BC7"
                      />
                    </g>
                  </svg>
                  <span
                    className="c21"
                  >
                    Dissertation
                  </span>
                </button>
              </span>
              <span
                className="c18 "
              >
                <button
                  autoFocus={false}
                  className="c3 c22 c20"
                  onClick={[Function]}
                  selected={false}
                  title="A book or a book chapter"
                  type="button"
                >
                  <svg
                    height={20}
                    viewBox="0 0 19 20"
                    width={19}
                  >
                    <g
                      fill="none"
                      fillRule="evenodd"
                    >
                      <path
                        d="M4.032 2.75H12.5v15.5H4.032c-.52 0-.815-.057-1.124-.222a1.659 1.659 0 01-.686-.686C2.057 17.033 2 16.738 2 16.218V4.782c0-.52.057-.815.222-1.124.157-.294.392-.529.686-.686.309-.165.604-.222 1.124-.222z"
                        stroke="#1A9BC7"
                        strokeWidth={1.5}
                      />
                      <path
                        d="M14.75 2.25a.75.75 0 01.75.75v15a.75.75 0 11-1.5 0V3a.75.75 0 01.75-.75zM17 2.5a.75.75 0 01.75.75v14.5a.75.75 0 11-1.5 0V3.25A.75.75 0 0117 2.5z"
                        fill="#1A9BC7"
                      />
                    </g>
                  </svg>
                  <span
                    className="c21"
                  >
                    Book
                  </span>
                </button>
              </span>
              <span
                className="c18 "
              >
                <button
                  autoFocus={false}
                  className="c3 c22 c20"
                  onClick={[Function]}
                  selected={false}
                  title="An application for funding."
                  type="button"
                >
                  <svg
                    height={20}
                    viewBox="0 0 18 20"
                    width={18}
                  >
                    <g
                      fill="none"
                      fillRule="evenodd"
                    >
                      <path
                        d="M4.282 2.25h9.436c.52 0 .815.057 1.124.222.294.157.529.392.686.686.165.309.222.604.222 1.124v11.436c0 .52-.057.815-.222 1.124a1.659 1.659 0 01-.686.686c-.309.165-.604.222-1.124.222H4.282c-.52 0-.815-.057-1.124-.222a1.659 1.659 0 01-.686-.686c-.165-.309-.222-.604-.222-1.124V4.282c0-.52.057-.815.222-1.124.157-.294.392-.529.686-.686.309-.165.604-.222 1.124-.222z"
                        stroke="#1A9BC7"
                        strokeWidth={1.5}
                      />
                      <text
                        fill="#1A9BC7"
                        fontFamily="Barlow-Bold, Barlow"
                        fontSize={10}
                        fontWeight="bold"
                        letterSpacing={-0.154}
                        transform="translate(3 3)"
                      >
                        <tspan
                          x={3.317}
                          y={10.75}
                        >
                          $
                        </tspan>
                      </text>
                    </g>
                  </svg>
                  <span
                    className="c21"
                  >
                    Grant Application
                  </span>
                </button>
              </span>
              <span
                className="c18 "
              >
                <button
                  autoFocus={false}
                  className="c3 c22 c20"
                  onClick={[Function]}
                  selected={false}
                  title="A blog post"
                  type="button"
                >
                  <svg
                    height={16}
                    viewBox="0 0 21 16"
                    width={21}
                  >
                    <g
                      fill="none"
                      fillRule="evenodd"
                      transform="translate(2 4)"
                    >
                      <path
                        d="M3.641-.75h10.718c.316 0 .523.04.739.155.212.114.383.285.497.497.115.216.155.423.155.739V7.75H2.25V.641c0-.316.04-.523.155-.739.114-.212.285-.383.497-.497.216-.115.423-.155.739-.155z"
                        stroke="#1A9BC7"
                        strokeWidth={1.5}
                      />
                      <rect
                        fill="#1A9BC7"
                        height={1.5}
                        rx={0.75}
                        width={18}
                        y={9}
                      />
                    </g>
                  </svg>
                  <span
                    className="c21"
                  >
                    Blog Post
                  </span>
                </button>
              </span>
              <span
                className="c18 "
              >
                <button
                  autoFocus={false}
                  className="c3 c22 c20"
                  onClick={[Function]}
                  selected={false}
                  title="A manual (for a software product etc)."
                  type="button"
                >
                  <svg
                    height={21}
                    viewBox="0 0 18 21"
                    width={18}
                  >
                    <g
                      fill="none"
                      fillRule="evenodd"
                    >
                      <path
                        d="M4.282 3.25h9.436c.52 0 .815.057 1.124.222.294.157.529.392.686.686.165.309.222.604.222 1.124v11.436c0 .52-.057.815-.222 1.124a1.659 1.659 0 01-.686.686c-.309.165-.604.222-1.124.222H4.282c-.52 0-.815-.057-1.124-.222a1.659 1.659 0 01-.686-.686c-.165-.309-.222-.604-.222-1.124V5.282c0-.52.057-.815.222-1.124.157-.294.392-.529.686-.686.309-.165.604-.222 1.124-.222z"
                        stroke="#1A9BC7"
                        strokeWidth={1.5}
                      />
                      <path
                        d="M10 8.5a.75.75 0 01-.75.75h-.999l-.001 1a.75.75 0 01-1.5 0v-1h-1a.75.75 0 010-1.5h1v-1a.75.75 0 011.5 0v1h1a.75.75 0 01.75.75z"
                        fill="#1A9BC7"
                      />
                    </g>
                  </svg>
                  <span
                    className="c21"
                  >
                    Manual
                  </span>
                </button>
              </span>
            </div>
            <button
              aria-label="Scroll right"
              className="c13 c14 c5 c15 c23"
              disabled={true}
              onClick={[Function]}
              size={20}
              type="button"
            >
              <svg
                height={20}
                viewBox="0 0 20 20"
                width={20}
              >
                <g
                  fill="none"
                  fillRule="evenodd"
                  transform="matrix(-1 0 0 1 20 0)"
                >
                  <circle
                    cx={10}
                    cy={10}
                    r={9}
                    stroke="#E2E2E2"
                  />
                  <path
                    d="M6.505 10.974l3.548-3 3.652 2.96"
                    stroke="#6E6E6E"
                    strokeLinecap="round"
                    strokeWidth={2}
                  />
                </g>
              </svg>
            </button>
          </div>
        </nav>
        <div
          className="c24"
        >
          <div
            className="c25"
            onBlur={[Function]}
            onFocus={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
          >
            <span
              className="c26"
            >
              <svg
                height={18}
                viewBox="0 0 18 18"
                width={18}
              >
                <path
                  d="M11.015 12.38a6.426 6.426 0 01-3.82 1.246A6.336 6.336 0 011.31 9.62a6.417 6.417 0 011.488-6.99 6.312 6.312 0 016.996-1.219 6.391 6.391 0 013.733 6.079 5.98 5.98 0 01-1.273 3.685l4.686 4.565.007.007a.804.804 0 01.201.587.778.778 0 01-.27.543.845.845 0 01-1.17.067l-4.693-4.566zM2.531 7.484v.003c.053 2.539 2.14 4.555 4.664 4.508a4.661 4.661 0 004.324-2.944c.71-1.78.275-3.82-1.098-5.15a4.646 4.646 0 00-5.144-.893 4.703 4.703 0 00-2.746 4.476z"
                  fill="#FFF"
                  fillRule="evenodd"
                  stroke="#FFF"
                  strokeWidth={0.3}
                />
              </svg>
            </span>
            <input
              autoComplete="off"
              autoFocus={true}
              className="c27 c28"
              onChange={[Function]}
              placeholder="Search"
              type="search"
              value=""
            />
          </div>
          <div
            className="c29"
          >
            <button
              className="c3 c30 c31"
              onClick={[Function]}
              type="button"
            >
              <div
                className="c32"
              >
                All Topics
              </div>
              <svg
                data-cy="arrow-down"
                height={8}
                viewBox="0 0 12 8"
                width={12}
              >
                <path
                  d="M2 2l3.942 4L10 2.053"
                  fill="none"
                  stroke="#353535"
                  strokeLinecap="round"
                  strokeWidth={1.6}
                />
              </svg>
            </button>
          </div>
        </div>
        <div
          className="c33"
        >
          <div
            style={
              Object {
                "height": 0,
                "overflow": "visible",
                "width": 0,
              }
            }
          />
        </div>
        <div
          className="c34"
        >
          <div
            className="c35"
          >
            <div
              className="c36"
            >
              Select a Template
            </div>
          </div>
          <div
            className="c37 c38"
          >
            <button
              className="c3 c30"
              disabled={false}
              onClick={[Function]}
              type="button"
            >
              Add Empty
            </button>
            <button
              className="c13 c39"
              disabled={true}
              onClick={[Function]}
              type="button"
            >
              Add Manuscript
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Template Selector Result 1`] = `
.c0 {
  background-color: #fff;
  color: #353535;
  font-family: "Lato",sans-serif;
  padding: 3rem;
}

.c8 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  color: #353535;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow-x: hidden;
}

.c4 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  overflow-x: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c6 {
  display: none;
}

.c5 {
  font-weight: 700;
  margin-right: 4px;
}

.c1 {
  border: 0;
  border-bottom: 1px solid;
  border-top: 1px solid;
  color: #353535;
  cursor: pointer;
  font: inherit;
  position: relative;
  background-color: transparent;
  border-color: transparent;
  outline: none;
  padding: 0 16px;
  text-align: unset;
  width: 100%;
}

.c1:hover,
.c1:focus {
  background-color: #f2fbfc;
  border-color: #f2f2f2;
}

.c2 {
  box-shadow: 0 1px 0 0 #f2f2f2;
  padding: 16px 0;
}

.c9 {
  color: #6e6e6e;
}

.c7 {
  margin: 0 4px;
}

<div
  className="c0"
>
  <div>
    <div
      style={
        Object {
          "width": 600,
        }
      }
    >
      <button
        className="c1"
        onClick={[Function]}
        selected={false}
      >
        <div
          className="c2"
          selected={false}
        >
          <div
            className="c3"
            selected={false}
          >
            <div
              className="c4"
              selected={false}
            >
              <span
                className="c5"
              >
                Drugs & Aging
              </span>
            </div>
            <div
              className="c6"
              selected={false}
            >
              <div
                className="c7"
              >
                <a
                  className="c8"
                  href="http://www.springer.com/cda/content/document/cda_downloaddocument/manuscript-guidelines-1.0.pdf"
                  rel="noopener"
                  target="_blank"
                >
                  ⓘ
                </a>
              </div>
            </div>
            <span
              className="c9"
              data-cy="article-type"
              selected={false}
            >
              Journal Publication
            </span>
          </div>
        </div>
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Template Selector Result: selected 1`] = `
.c0 {
  background-color: #fff;
  color: #353535;
  font-family: "Lato",sans-serif;
  padding: 3rem;
}

.c8 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  color: #353535;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  white-space: normal;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  text-overflow: ellipsis;
  overflow-x: hidden;
}

.c4 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  overflow-x: hidden;
  text-overflow: ellipsis;
  white-space: normal;
}

.c11 {
  font-size: 14px;
  overflow-x: hidden;
  text-overflow: ellipsis;
  white-space: normal;
}

.c10 {
  color: #6e6e6e;
  font-size: 14px;
  margin: 8px 0;
  overflow-x: hidden;
  text-overflow: ellipsis;
}

.c6 {
  display: inline;
}

.c5 {
  font-weight: 700;
  margin-right: 4px;
}

.c1 {
  border: 0;
  border-bottom: 1px solid;
  border-top: 1px solid;
  color: #353535;
  cursor: pointer;
  font: inherit;
  position: relative;
  background-color: #f2fbfc;
  border-color: #bce7f6 !important;
  outline: none;
  padding: 0 16px;
  text-align: unset;
  width: 100%;
}

.c1:hover,
.c1:focus {
  background-color: #f2fbfc;
  border-color: #f2f2f2;
}

.c2 {
  padding: 16px 0;
}

.c9 {
  color: #6e6e6e;
  display: block;
  width: 100%;
  margin: 8px 0;
}

.c7 {
  margin: 0 4px;
}

<div
  className="c0"
>
  <div>
    <div
      style={
        Object {
          "width": 600,
        }
      }
    >
      <button
        className="c1"
        onClick={[Function]}
        selected={true}
      >
        <div
          className="c2"
          selected={true}
        >
          <div
            className="c3"
            selected={true}
          >
            <div
              className="c4"
              selected={true}
            >
              <span
                className="c5"
              >
                Drugs & Aging
              </span>
            </div>
            <div
              className="c6"
              selected={true}
            >
              <div
                className="c7"
              >
                <a
                  className="c8"
                  href="http://www.springer.com/cda/content/document/cda_downloaddocument/manuscript-guidelines-1.0.pdf"
                  rel="noopener"
                  target="_blank"
                >
                  ⓘ
                </a>
              </div>
            </div>
            <span
              className="c9"
              data-cy="article-type"
              selected={true}
            >
              Journal Publication
            </span>
          </div>
          <div
            className="c10"
          >
            Springer Science+Business Media
          </div>
          <div
            className="c11"
            selected={true}
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Metus dictum at tempor commodo ullamcorper a lacus vestibulum sed. Sit amet aliquam id diam maecenas. Amet mattis vulputate enim nulla aliquet porttitor lacus luctus accumsan. Amet mattis vulputate enim nulla aliquet. Elit sed vulputate mi sit amet mauris commodo quis imperdiet. Ultrices gravida dictum fusce ut placerat orci nulla pellentesque dignissim. Massa vitae tortor condimentum lacinia quis vel eros donec ac. Orci dapibus ultrices in iaculis nunc sed augue lacus viverra. Nunc pulvinar sapien et ligula ullamcorper malesuada proin libero. Semper auctor neque vitae tempus. Faucibus purus in massa tempor nec feugiat nisl. Quisque id diam vel quam elementum pulvinar. Sed ullamcorper morbi tincidunt ornare massa. Id venenatis a condimentum vitae sapien pellentesque habitant morbi.
          </div>
        </div>
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Template Selector Results list 1`] = `
.c0 {
  background-color: #fff;
  color: #353535;
  font-family: "Lato",sans-serif;
  padding: 3rem;
}

.c8 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  color: #353535;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow-x: hidden;
}

.c4 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  overflow-x: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c6 {
  display: none;
}

.c5 {
  font-weight: 700;
  margin-right: 4px;
}

.c1 {
  border: 0;
  border-bottom: 1px solid;
  border-top: 1px solid;
  color: #353535;
  cursor: pointer;
  font: inherit;
  position: relative;
  background-color: transparent;
  border-color: transparent;
  outline: none;
  padding: 0 16px;
  text-align: unset;
  width: 100%;
}

.c1:hover,
.c1:focus {
  background-color: #f2fbfc;
  border-color: #f2f2f2;
}

.c2 {
  box-shadow: 0 1px 0 0 #f2f2f2;
  padding: 16px 0;
}

.c9 {
  color: #6e6e6e;
}

.c7 {
  margin: 0 4px;
}

<div
  className="c0"
>
  <div>
    <div
      style={
        Object {
          "height": 400,
          "width": 600,
        }
      }
    >
      <div
        onScroll={[Function]}
        style={
          Object {
            "WebkitOverflowScrolling": "touch",
            "direction": "ltr",
            "height": 400,
            "overflow": "auto",
            "position": "relative",
            "width": 600,
            "willChange": "transform",
          }
        }
      >
        <div
          style={
            Object {
              "height": 432,
              "pointerEvents": undefined,
              "width": "100%",
            }
          }
        >
          <div
            id="MPManuscriptTemplate:www-zotero-org-styles-drugs-and-aging-Drugs-&-Aging-Journal--Publication"
            style={
              Object {
                "height": 48,
                "left": 0,
                "paddingBottom": "12px",
                "position": "absolute",
                "right": undefined,
                "top": 0,
                "transition": "all 200ms ease-in-out",
                "width": "100%",
              }
            }
          >
            <button
              className="c1"
              onClick={[Function]}
              selected={false}
            >
              <div
                className="c2"
                selected={false}
              >
                <div
                  className="c3"
                  selected={false}
                >
                  <div
                    className="c4"
                    selected={false}
                  >
                    <span
                      className="c5"
                    >
                      Drugs & Aging
                    </span>
                  </div>
                  <div
                    className="c6"
                    selected={false}
                  >
                    <div
                      className="c7"
                    >
                      <a
                        className="c8"
                        href="http://www.springer.com/cda/content/document/cda_downloaddocument/manuscript-guidelines-1.0.pdf"
                        rel="noopener"
                        target="_blank"
                      >
                        ⓘ
                      </a>
                    </div>
                  </div>
                  <span
                    className="c9"
                    data-cy="article-type"
                    selected={false}
                  >
                    Journal Publication
                  </span>
                </div>
              </div>
            </button>
          </div>
          <div
            id="MPManuscriptTemplate:www-zotero-org-styles-drugs-and-aging-Drugs-&-Aging-Journal--Publication-Review-Article"
            style={
              Object {
                "height": 48,
                "left": 0,
                "paddingBottom": "12px",
                "position": "absolute",
                "right": undefined,
                "top": 48,
                "transition": "all 200ms ease-in-out",
                "width": "100%",
              }
            }
          >
            <button
              className="c1"
              onClick={[Function]}
              selected={false}
            >
              <div
                className="c2"
                selected={false}
              >
                <div
                  className="c3"
                  selected={false}
                >
                  <div
                    className="c4"
                    selected={false}
                  >
                    <span
                      className="c5"
                    >
                      Drugs & Aging
                    </span>
                  </div>
                  <div
                    className="c6"
                    selected={false}
                  >
                    <div
                      className="c7"
                    >
                      <a
                        className="c8"
                        href="http://www.springer.com/cda/content/document/cda_downloaddocument/manuscript-guidelines-1.0.pdf"
                        rel="noopener"
                        target="_blank"
                      >
                        ⓘ
                      </a>
                    </div>
                  </div>
                  <span
                    className="c9"
                    data-cy="article-type"
                    selected={false}
                  >
                    Review Article
                  </span>
                </div>
              </div>
            </button>
          </div>
          <div
            id="MPManuscriptTemplate:www-zotero-org-styles-drugs-and-aging-Drugs-&-Aging-Journal--Publication-Current-Opinion"
            style={
              Object {
                "height": 48,
                "left": 0,
                "paddingBottom": "12px",
                "position": "absolute",
                "right": undefined,
                "top": 96,
                "transition": "all 200ms ease-in-out",
                "width": "100%",
              }
            }
          >
            <button
              className="c1"
              onClick={[Function]}
              selected={false}
            >
              <div
                className="c2"
                selected={false}
              >
                <div
                  className="c3"
                  selected={false}
                >
                  <div
                    className="c4"
                    selected={false}
                  >
                    <span
                      className="c5"
                    >
                      Drugs & Aging
                    </span>
                  </div>
                  <div
                    className="c6"
                    selected={false}
                  >
                    <div
                      className="c7"
                    >
                      <a
                        className="c8"
                        href="http://www.springer.com/cda/content/document/cda_downloaddocument/manuscript-guidelines-1.0.pdf"
                        rel="noopener"
                        target="_blank"
                      >
                        ⓘ
                      </a>
                    </div>
                  </div>
                  <span
                    className="c9"
                    data-cy="article-type"
                    selected={false}
                  >
                    Current Opinion
                  </span>
                </div>
              </div>
            </button>
          </div>
          <div
            id="MPManuscriptTemplate:www-zotero-org-styles-drugs-and-aging-Drugs-&-Aging-Journal--Publication-Leading-Article"
            style={
              Object {
                "height": 48,
                "left": 0,
                "paddingBottom": "12px",
                "position": "absolute",
                "right": undefined,
                "top": 144,
                "transition": "all 200ms ease-in-out",
                "width": "100%",
              }
            }
          >
            <button
              className="c1"
              onClick={[Function]}
              selected={false}
            >
              <div
                className="c2"
                selected={false}
              >
                <div
                  className="c3"
                  selected={false}
                >
                  <div
                    className="c4"
                    selected={false}
                  >
                    <span
                      className="c5"
                    >
                      Drugs & Aging
                    </span>
                  </div>
                  <div
                    className="c6"
                    selected={false}
                  >
                    <div
                      className="c7"
                    >
                      <a
                        className="c8"
                        href="http://www.springer.com/cda/content/document/cda_downloaddocument/manuscript-guidelines-1.0.pdf"
                        rel="noopener"
                        target="_blank"
                      >
                        ⓘ
                      </a>
                    </div>
                  </div>
                  <span
                    className="c9"
                    data-cy="article-type"
                    selected={false}
                  >
                    Leading Article
                  </span>
                </div>
              </div>
            </button>
          </div>
          <div
            id="MPManuscriptTemplate:www-zotero-org-styles-drugs-and-aging-Drugs-&-Aging-Journal--Publication-Therapy-in-Practice"
            style={
              Object {
                "height": 48,
                "left": 0,
                "paddingBottom": "12px",
                "position": "absolute",
                "right": undefined,
                "top": 192,
                "transition": "all 200ms ease-in-out",
                "width": "100%",
              }
            }
          >
            <button
              className="c1"
              onClick={[Function]}
              selected={false}
            >
              <div
                className="c2"
                selected={false}
              >
                <div
                  className="c3"
                  selected={false}
                >
                  <div
                    className="c4"
                    selected={false}
                  >
                    <span
                      className="c5"
                    >
                      Drugs & Aging
                    </span>
                  </div>
                  <div
                    className="c6"
                    selected={false}
                  >
                    <div
                      className="c7"
                    >
                      <a
                        className="c8"
                        href="http://www.springer.com/cda/content/document/cda_downloaddocument/manuscript-guidelines-1.0.pdf"
                        rel="noopener"
                        target="_blank"
                      >
                        ⓘ
                      </a>
                    </div>
                  </div>
                  <span
                    className="c9"
                    data-cy="article-type"
                    selected={false}
                  >
                    Therapy in Practice
                  </span>
                </div>
              </div>
            </button>
          </div>
          <div
            id="MPManuscriptTemplate:www-zotero-org-styles-drugs-and-aging-Drugs-&-Aging-Journal--Publication-Systematic-Review"
            style={
              Object {
                "height": 48,
                "left": 0,
                "paddingBottom": "12px",
                "position": "absolute",
                "right": undefined,
                "top": 240,
                "transition": "all 200ms ease-in-out",
                "width": "100%",
              }
            }
          >
            <button
              className="c1"
              onClick={[Function]}
              selected={false}
            >
              <div
                className="c2"
                selected={false}
              >
                <div
                  className="c3"
                  selected={false}
                >
                  <div
                    className="c4"
                    selected={false}
                  >
                    <span
                      className="c5"
                    >
                      Drugs & Aging
                    </span>
                  </div>
                  <div
                    className="c6"
                    selected={false}
                  >
                    <div
                      className="c7"
                    >
                      <a
                        className="c8"
                        href="http://www.springer.com/cda/content/document/cda_downloaddocument/manuscript-guidelines-1.0.pdf"
                        rel="noopener"
                        target="_blank"
                      >
                        ⓘ
                      </a>
                    </div>
                  </div>
                  <span
                    className="c9"
                    data-cy="article-type"
                    selected={false}
                  >
                    Systematic Review
                  </span>
                </div>
              </div>
            </button>
          </div>
          <div
            id="MPManuscriptTemplate:MPBundle:www-zotero-org-styles-harvard1-cambridge_university_press_journal_publication"
            style={
              Object {
                "height": 48,
                "left": 0,
                "paddingBottom": "12px",
                "position": "absolute",
                "right": undefined,
                "top": 288,
                "transition": "all 200ms ease-in-out",
                "width": "100%",
              }
            }
          >
            <button
              className="c1"
              onClick={[Function]}
              selected={false}
            >
              <div
                className="c2"
                selected={false}
              >
                <div
                  className="c3"
                  selected={false}
                >
                  <div
                    className="c4"
                    selected={false}
                  >
                    <span
                      className="c5"
                    >
                      Cambridge University Press
                    </span>
                  </div>
                  <div
                    className="c6"
                    selected={false}
                  />
                  <span
                    className="c9"
                    data-cy="article-type"
                    selected={false}
                  >
                    Journal Publication
                  </span>
                </div>
              </div>
            </button>
          </div>
          <div
            id="MPManuscriptTemplate:MPManuscriptTemplate:MPBundle:www-zotero-org-styles-harvard1-cambridge_university_press_journal_publication-MPBundle:www-zotero-org-styles-harvard1-thalamus_and_related_systems_"
            style={
              Object {
                "height": 48,
                "left": 0,
                "paddingBottom": "12px",
                "position": "absolute",
                "right": undefined,
                "top": 336,
                "transition": "all 200ms ease-in-out",
                "width": "100%",
              }
            }
          >
            <button
              className="c1"
              onClick={[Function]}
              selected={false}
            >
              <div
                className="c2"
                selected={false}
              >
                <div
                  className="c3"
                  selected={false}
                >
                  <div
                    className="c4"
                    selected={false}
                  >
                    <span
                      className="c5"
                    >
                      Thalamus and Related Systems
                    </span>
                  </div>
                  <div
                    className="c6"
                    selected={false}
                  />
                </div>
              </div>
            </button>
          </div>
          <div
            id="MPBundle:www-zotero-org-styles-zoology-in-the-middle-east"
            style={
              Object {
                "height": 48,
                "left": 0,
                "paddingBottom": "12px",
                "position": "absolute",
                "right": undefined,
                "top": 384,
                "transition": "all 200ms ease-in-out",
                "width": "100%",
              }
            }
          >
            <button
              className="c1"
              onClick={[Function]}
              selected={false}
            >
              <div
                className="c2"
                selected={false}
              >
                <div
                  className="c3"
                  selected={false}
                >
                  <div
                    className="c4"
                    selected={false}
                  >
                    <span
                      className="c5"
                    >
                      Zoology in the Middle East
                    </span>
                  </div>
                  <div
                    className="c6"
                    selected={false}
                  >
                    <div
                      className="c7"
                    >
                      <a
                        className="c8"
                        href="http://www.tandfonline.com/action/authorSubmission?journalCode=TZME20&page=instructions"
                        rel="noopener"
                        target="_blank"
                      >
                        ⓘ
                      </a>
                    </div>
                  </div>
                </div>
              </div>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Template Selector Search input 1`] = `
.c4 {
  display: block;
  border: 1px solid #e2e2e2;
  border-radius: 4px;
  box-sizing: border-box;
  font: 400 16px / 1 "Lato",sans-serif;
  outline: none;
  padding: 10px 16px;
  position: relative;
  width: 100%;
}

.c4:focus {
  border-color: #bce7f6;
  background-color: #f2fbfc;
}

.c4:hover {
  background-color: #f2fbfc;
}

.c4:invalid {
  box-shadow: none;
}

.c0 {
  background-color: #fff;
  color: #353535;
  font-family: "Lato",sans-serif;
  padding: 3rem;
}

.c2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
  position: relative;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  left: 16px;
  position: absolute;
  z-index: 2;
}

.c3 path {
  fill: #353535;
}

.c5 {
  -webkit-appearance: textfield;
  padding-left: 44px;
}

.c5:hover,
.c5:focus {
  background-color: #f2fbfc;
}

.c1 {
  margin: 0 30px 20px 10px;
}

<div
  className="c0"
>
  <div>
    <div
      className="c1"
    >
      <div
        className="c2"
        onBlur={[Function]}
        onFocus={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
      >
        <span
          className="c3"
        >
          <svg
            height={18}
            viewBox="0 0 18 18"
            width={18}
          >
            <path
              d="M11.015 12.38a6.426 6.426 0 01-3.82 1.246A6.336 6.336 0 011.31 9.62a6.417 6.417 0 011.488-6.99 6.312 6.312 0 016.996-1.219 6.391 6.391 0 013.733 6.079 5.98 5.98 0 01-1.273 3.685l4.686 4.565.007.007a.804.804 0 01.201.587.778.778 0 01-.27.543.845.845 0 01-1.17.067l-4.693-4.566zM2.531 7.484v.003c.053 2.539 2.14 4.555 4.664 4.508a4.661 4.661 0 004.324-2.944c.71-1.78.275-3.82-1.098-5.15a4.646 4.646 0 00-5.144-.893 4.703 4.703 0 00-2.746 4.476z"
              fill="#FFF"
              fillRule="evenodd"
              stroke="#FFF"
              strokeWidth={0.3}
            />
          </svg>
        </span>
        <input
          autoFocus={true}
          className="c4 c5"
          onChange={[Function]}
          placeholder="Search"
          type="search"
          value=""
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Template Selector Topic selector 1`] = `
.c2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: transparent;
  border: 1px solid transparent;
  border-radius: 4px;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  font: 400 16px / 24px "Lato",sans-serif;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  outline: none;
  padding: 7px 12px;
  -webkit-transition: border 0.1s,color 0.1s,background-color 0.1s,color 0.1s, filter 0.1s;
  transition: border 0.1s,color 0.1s,background-color 0.1s,color 0.1s, filter 0.1s;
  vertical-align: middle;
  white-space: nowrap;
}

.c2 svg + span {
  margin-left: 4px;
}

.c3 {
  color: #0d79d0;
  background-color: transparent;
  border-color: transparent;
}

.c3:not([disabled]):hover,
.c3:not([disabled]):focus {
  color: #0d79d0;
  background-color: #f2fbfc;
  border-color: #f2fbfc;
}

.c3:not([disabled]):active {
  color: #0d79d0;
  background-color: transparent;
  border-color: transparent;
}

.c0 {
  background-color: #fff;
  color: #353535;
  font-family: "Lato",sans-serif;
  padding: 3rem;
}

.c1 {
  border-left: 1px solid #e2e2e2;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c1 button {
  border-radius: 0;
}

.c1 svg path[stroke] {
  stroke: currentColor;
}

.c4 {
  color: #6e6e6e;
  font-size: 14px;
  font-weight: 400;
  text-transform: none;
}

.c5 {
  margin-right: 4px;
}

<div
  className="c0"
>
  <div>
    <div
      style={
        Object {
          "width": 200,
        }
      }
    >
      <div
        className="c1"
      >
        <button
          className="c2 c3 c4"
          onClick={[Function]}
          type="button"
        >
          <div
            className="c5"
          >
            All Topics
          </div>
          <svg
            data-cy="arrow-down"
            height={8}
            viewBox="0 0 12 8"
            width={12}
          >
            <path
              d="M2 2l3.942 4L10 2.053"
              fill="none"
              stroke="#353535"
              strokeLinecap="round"
              strokeWidth={1.6}
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Template Selector Topics list 1`] = `
.c0 {
  background-color: #fff;
  color: #353535;
  font-family: "Lato",sans-serif;
  padding: 3rem;
}

.c1 {
  position: relative;
  z-index: 2;
}

.c2 {
  border: 1px solid #e2e2e2;
  border-radius: 8px;
  box-shadow: 0 4px 9px 0 rgba(84,83,83,0.3);
  background: #fff;
  height: 300px;
  max-height: 50vh;
  overflow-y: auto;
  position: absolute;
  right: 0;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 8px;
  font-size: 16px;
  font-weight: 500;
  color: #353535;
  cursor: pointer;
}

.c3:hover {
  background-color: #f2fbfc;
}

.c5 {
  height: 1px;
  opacity: 0.23;
  background-color: #e2e2e2;
}

.c4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  width: 32px;
  height: 1em;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

<div
  className="c0"
>
  <div>
    <div
      className="c1"
      data-cy="template-topics-list"
    >
      <div
        className="c2"
      >
        <div
          className="c3"
          onClick={[Function]}
        >
          <span
            className="c4"
          >
            <svg
              height={16}
              viewBox="0 0 32 34"
              width={16}
            >
              <g
                fill="none"
                fillRule="evenodd"
              >
                <g
                  stroke="#FFE185"
                >
                  <path
                    d="M20 3.144a8 8 0 00-8 0L6 6.608a8 8 0 00-4 6.928v6.928a8 8 0 004 6.928l6 3.464a8 8 0 008 0l6-3.464a8 8 0 004-6.928v-6.928a8 8 0 00-4-6.928l-6-3.464z"
                    strokeWidth={2}
                  />
                  <path
                    d="M16 9a.75.75 0 01.75.75l-.001 5.999 6.001.001a.75.75 0 110 1.5l-6.001-.001.001 6.001a.75.75 0 11-1.5 0l-.001-6.001-5.999.001a.75.75 0 110-1.5l5.999-.001.001-5.999A.75.75 0 0116 9z"
                    fill="#FFE185"
                  />
                </g>
                <path
                  d="M20.5 2.278l6 3.464a9 9 0 014.5 7.794v6.928a9 9 0 01-4.5 7.794l-6 3.464a9 9 0 01-9 0l-6-3.464A9 9 0 011 20.464v-6.928a9 9 0 014.5-7.794l6-3.464a9 9 0 019 0z"
                  fill="#8DD439"
                />
                <path
                  d="M12.355 17.264a1.094 1.094 0 00-1.468.023l-.148.143a.91.91 0 00.022 1.358l3.634 3.258 8.81-8.002a.878.878 0 00-.011-1.333l-.154-.137a1.139 1.139 0 00-1.492.004l-7.205 6.469-1.988-1.783z"
                  fill="#FFF"
                />
              </g>
            </svg>
          </span>
          All Topics
        </div>
        <div
          className="c5"
        />
        <div
          className="c3"
          onClick={[Function]}
        >
          <span
            className="c4"
          />
          Anthropology
        </div>
        <div
          className="c3"
          onClick={[Function]}
        >
          <span
            className="c4"
          />
          Astronomy
        </div>
        <div
          className="c3"
          onClick={[Function]}
        >
          <span
            className="c4"
          />
          Biology
        </div>
        <div
          className="c3"
          onClick={[Function]}
        >
          <span
            className="c4"
          />
          Botany
        </div>
        <div
          className="c3"
          onClick={[Function]}
        >
          <span
            className="c4"
          />
          Chemistry
        </div>
        <div
          className="c3"
          onClick={[Function]}
        >
          <span
            className="c4"
          />
          Communications
        </div>
        <div
          className="c3"
          onClick={[Function]}
        >
          <span
            className="c4"
          />
          Engineering
        </div>
        <div
          className="c3"
          onClick={[Function]}
        >
          <span
            className="c4"
          />
          Generic base
        </div>
        <div
          className="c3"
          onClick={[Function]}
        >
          <span
            className="c4"
          />
          Geography
        </div>
        <div
          className="c3"
          onClick={[Function]}
        >
          <span
            className="c4"
          />
          Geology
        </div>
        <div
          className="c3"
          onClick={[Function]}
        >
          <span
            className="c4"
          />
          History
        </div>
        <div
          className="c3"
          onClick={[Function]}
        >
          <span
            className="c4"
          />
          Humanities
        </div>
        <div
          className="c3"
          onClick={[Function]}
        >
          <span
            className="c4"
          />
          Law
        </div>
        <div
          className="c3"
          onClick={[Function]}
        >
          <span
            className="c4"
          />
          Linguistics
        </div>
        <div
          className="c3"
          onClick={[Function]}
        >
          <span
            className="c4"
          />
          Literature
        </div>
        <div
          className="c3"
          onClick={[Function]}
        >
          <span
            className="c4"
          />
          Math
        </div>
        <div
          className="c3"
          onClick={[Function]}
        >
          <span
            className="c4"
          />
          Medicine
        </div>
        <div
          className="c3"
          onClick={[Function]}
        >
          <span
            className="c4"
          />
          Philosophy
        </div>
        <div
          className="c3"
          onClick={[Function]}
        >
          <span
            className="c4"
          />
          Physics
        </div>
        <div
          className="c3"
          onClick={[Function]}
        >
          <span
            className="c4"
          />
          Political science
        </div>
        <div
          className="c3"
          onClick={[Function]}
        >
          <span
            className="c4"
          />
          Psychology
        </div>
        <div
          className="c3"
          onClick={[Function]}
        >
          <span
            className="c4"
          />
          Science
        </div>
        <div
          className="c3"
          onClick={[Function]}
        >
          <span
            className="c4"
          />
          Social science
        </div>
        <div
          className="c3"
          onClick={[Function]}
        >
          <span
            className="c4"
          />
          Sociology
        </div>
        <div
          className="c3"
          onClick={[Function]}
        >
          <span
            className="c4"
          />
          Theology
        </div>
        <div
          className="c3"
          onClick={[Function]}
        >
          <span
            className="c4"
          />
          Zoology
        </div>
      </div>
    </div>
  </div>
</div>
`;
